--- a/app/src/main/res/layout/fragment_goods_detail.xml
+++ b/app/src/main/res/layout/fragment_goods_detail.xml
@@ -4,21 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="40dp"
     tools:context=".goodsEx.GoodsDetailFragment">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
+            android:id="@+id/llGoodsDetailFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="40dp"
             android:orientation="vertical">
-            <ImageView
-                android:id="@+id/ivGoodsDetail"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:src="@drawable/goods_detail"/>
-
             <TextView
                 android:id="@+id/tvGoodsDetailTitle"
                 android:layout_width="match_parent"
@@ -44,7 +39,14 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:paddingLeft="20dp"
-                android:paddingTop="5dp"/>
+                android:paddingVertical="5dp"/>
+<!--
+            <ImageView
+                android:id="@+id/ivGoodsDetail"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:src="@drawable/no_image"/>-->
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
