--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -11,6 +11,7 @@
         android:layout_height="60dp">
         <!--전체적으로 id는 추후 추가-->
         <ImageView
+            android:id="@+id/ivBack"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
