--- a/app/src/main/res/layout/fragment_interest_all.xml
+++ b/app/src/main/res/layout/fragment_interest_all.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     android:layout_marginTop="20dp"
     android:orientation="vertical"
-    tools:context=".interestAllFragment">
+    tools:context=".interest.InterestAllFragment">
 
-    <LinearLayout
+<!--    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -24,10 +24,11 @@
             android:layout_gravity="center_vertical"
             android:textColor="@color/black"/>
 
-    </LinearLayout>
+    </LinearLayout>-->
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvInterestAll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp"/>
 
 </LinearLayout>
