--- a/app/src/main/res/layout/fragment_interest_tmp.xml
+++ b/app/src/main/res/layout/fragment_interest_tmp.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_marginTop="20dp"
     android:orientation="vertical"
-    tools:context=".InterestTmpFragment">
+    tools:context=".interest.InterestTmpFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
