--- a/app/src/main/res/layout/interest_item_view.xml
+++ b/app/src/main/res/layout/interest_item_view.xml
@@ -12,12 +12,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal">
-        
+
+<!--        체크박스 기능 보류-->
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:visibility="invisible"/>
+
         <TextView
+            android:id="@+id/tvInterestItemWriter"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="글쓴이"
@@ -26,6 +30,7 @@
             android:textColor="@color/black"
             android:ellipsize="end"/>
         <TextView
+            android:id="@+id/tvInterestItemName"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
@@ -40,11 +45,13 @@
         android:orientation="horizontal"
         android:layout_marginTop="10dp">
         <ImageView
+            android:id="@+id/ivInterestItemImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/dukbird"
             android:layout_marginLeft="70dp"/>
         <TextView
+            android:id="@+id/tvInterestItemPrice"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="10,000원"
@@ -52,6 +59,7 @@
             android:textColor="@color/black"
             android:layout_gravity="center_vertical"/>
         <ImageView
+            android:id="@+id/ivInterestItemDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/outline_close_24"
