--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -15,6 +15,7 @@
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_category_item"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -110,10 +111,10 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
                 android:max="100"
                 android:progress="40"
                 android:progressTint="@color/burgundy"
-                android:layout_marginTop="1dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
